--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,8 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/test
-    username: sa
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://10.0.1.26:3306/getz?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     open-in-view: false
@@ -10,24 +11,13 @@ spring:
     hibernate:
       ddl-auto: create
 
-oauth2:
-  client:
-    providers:
-      kakao:
-        admin-key: adminkey
-        user-info-uri: https://kapi.kakao.com/v2/user/me
-        user-unlink-uri: https://kapi.kakao.com/v1/user/unlink
-cors:
-  allow-origins:
-    - http://localhost:5173
-    - https://auction.jjust.kr
-
 jwt:
-  secret-key: thisissecretkeyisandeokgyun88012712859123jnqweasdpqwekjqwe
+  secret-key: ${JWT_SECRET_KEY}
   accessToken-expiration-millis: 1_800_000
-  refrestToken-expiration-mills: 1_209_600_000
+  refreshToken-expiration-mills: 1_209_600_000
 
-domain: localhost
-sameSite: None
-access-token-path: /
-refresh-token-path: /
+cookie:
+  domain: getz.kr
+  sameSite: None
+  access-token-path: /
+  refresh-token-path: /
