--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -10,26 +10,13 @@ spring:
     hibernate:
       ddl-auto: create
 
-
-
-oauth2:
-  client:
-    providers:
-      kakao:
-        admin-key: adminkey
-        user-info-uri: https://kapi.kakao.com/v2/user/me
-        user-unlink-uri: https://kapi.kakao.com/v1/user/unlink
-cors:
-  allow-origins:
-    - http://localhost:5173
-    - https://auction.jjust.kr
-
 jwt:
   secret-key: thisissecretkeyisandeokgyun88012712859123jnqweasdpqwekjqwe
   accessToken-expiration-millis: 1_800_000
-  refrestToken-expiration-mills: 1_209_600_000
+  refreshToken-expiration-mills: 1_209_600_000
 
-domain: localhost
-sameSite: None
-access-token-path: /
-refresh-token-path: /
+cookie:
+  domain: localhost
+  sameSite: None
+  access-token-path: /
+  refresh-token-path: /
